# task11_2/export/el3d9s2l0k_oas_v3.json
@@ -2,12 +2,11 @@
   "openapi": "3.0.1",
   "info": {
     "title": "task11_api",
-    "version": "2024-11-15T12:14:44Z",
-    "description": "task11_api"
+    "version": "2024-11-15T10:44:41Z"
   },
   "servers": [
     {
-      "url": "https://qb2xrtoqx6.execute-api.eu-central-1.amazonaws.com/{basePath}",
+      "url": "https://el3d9s2l0k.execute-api.eu-central-1.amazonaws.com/{basePath}",
       "variables": {
         "basePath": {
           "default": "api"
@@ -18,8 +17,6 @@
   "paths": {
     "/reservations": {
       "get": {
-        "summary": "Getting all brones",
-        "description": "get info about reservation",
         "responses": {
           "200": {
             "description": "200 response",
@@ -33,19 +30,10 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "reservations": {
-                      "type": "array",
-                      "items": { "type": "object" }
-                    }
-                  }
+                  "$ref": "#/components/schemas/Empty"
                 }
               }
             }
-          },
-          "400": {
-            "description": "Error"
           }
         },
         "security": [
@@ -54,8 +42,9 @@
           }
         ],
         "x-amazon-apigateway-integration": {
+          "type": "aws_proxy",
           "httpMethod": "POST",
-          "uri": "arn:aws:apigateway:eu-central-1:lambda:path/2015-03-31/functions/arn:aws:lambda:eu-central-1:196241772369:function:api_handler/invocations",
+          "uri": "arn:aws:apigateway:eu-central-1:lambda:path/2015-03-31/functions/arn:aws:lambda:eu-central-1:196241772369:function:api_handler-test/invocations",
           "responses": {
             "default": {
               "statusCode": "200",
@@ -64,58 +53,27 @@
               }
             }
           },
-          "passthroughBehavior": "when_no_match",
-          "type": "aws_proxy"
+          "passthroughBehavior": "when_no_match"
         }
       },
       "post": {
-        "summary": "New brone",
-        "description":  "Do new reservations",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "tableNumber": { "type": "integer" },
-                  "clientName": { "type": "string" },
-                  "phoneNumber": { "type": "string" },
-                  "date": { "type": "string", "format": "date" },
-                  "slotTimeStart": { "type": "string", "format": "time" },
-                  "slotTimeEnd": { "type": "string", "format": "time" }
-                },
-                "required": ["tableNumber", "clientName", "phoneNumber", "date", "slotTimeStart", "slotTimeEnd"]
-              }
-            }
-          }
-        },
         "responses": {
           "200": {
             "description": "200 response",
             "headers": {
               "Access-Control-Allow-Origin": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "reservationId": { "type": "string" }
-                  }
+                  "type": "string"
                 }
               }
             },
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "reservationId": { "type": "string" }
-                  }
+                  "$ref": "#/components/schemas/Empty"
                 }
               }
             }
-          },
-          "400": {
-            "description": "Error"
           }
         },
         "security": [
@@ -124,8 +82,9 @@
           }
         ],
         "x-amazon-apigateway-integration": {
+          "type": "aws_proxy",
           "httpMethod": "POST",
-          "uri": "arn:aws:apigateway:eu-central-1:lambda:path/2015-03-31/functions/arn:aws:lambda:eu-central-1:196241772369:function:api_handler/invocations",
+          "uri": "arn:aws:apigateway:eu-central-1:lambda:path/2015-03-31/functions/arn:aws:lambda:eu-central-1:196241S772369:function:api_handler/invocations",
           "responses": {
             "default": {
               "statusCode": "200",
@@ -134,8 +93,7 @@
               }
             }
           },
-          "passthroughBehavior": "when_no_match",
-          "type": "aws_proxy"
+          "passthroughBehavior": "when_no_match"
         }
       },
       "options": {
@@ -169,6 +127,7 @@
           }
         },
         "x-amazon-apigateway-integration": {
+          "type": "mock",
           "responses": {
             "default": {
               "statusCode": "200",
@@ -182,15 +141,12 @@
           "requestTemplates": {
             "application/json": "{\"statusCode\": 200}"
           },
-          "passthroughBehavior": "when_no_match",
-          "type": "mock"
+          "passthroughBehavior": "when_no_match"
         }
       }
     },
     "/tables": {
       "get": {
-        "summary": "get all tables",
-        "description": "get all tables",
         "responses": {
           "200": {
             "description": "200 response",
@@ -204,14 +160,10 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": { "type": "object" }
+                  "$ref": "#/components/schemas/Empty"
                 }
               }
             }
-          },
-          "400": {
-            "description": "error"
           }
         },
         "security": [
@@ -220,6 +172,7 @@
           }
         ],
         "x-amazon-apigateway-integration": {
+          "type": "aws_proxy",
           "httpMethod": "POST",
           "uri": "arn:aws:apigateway:eu-central-1:lambda:path/2015-03-31/functions/arn:aws:lambda:eu-central-1:196241772369:function:api_handler/invocations",
           "responses": {
@@ -230,31 +183,10 @@
               }
             }
           },
-          "passthroughBehavior": "when_no_match",
-          "type": "aws_proxy"
+          "passthroughBehavior": "when_no_match"
         }
       },
       "post": {
-        "summary": "add table",
-        "description": "This method allows the user to add a new table",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "id": { "type": "integer" },
-                  "number": { "type": "integer" },
-                  "places": { "type": "integer" },
-                  "isVip": { "type": "boolean" },
-                  "minOrder": { "type": "integer" }
-                },
-                "required": ["id", "number", "places", "isVip"]
-              }
-            }
-          }
-        },
         "responses": {
           "200": {
             "description": "200 response",
@@ -265,20 +197,13 @@
                 }
               }
             },
-            
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "id": { "type": "integer" }
-                  }
+                  "$ref": "#/components/schemas/Empty"
                 }
               }
             }
-          },
-          "400": {
-            "description": "error"
           }
         },
         "security": [
@@ -287,6 +212,7 @@
           }
         ],
         "x-amazon-apigateway-integration": {
+          "type": "aws_proxy",
           "httpMethod": "POST",
           "uri": "arn:aws:apigateway:eu-central-1:lambda:path/2015-03-31/functions/arn:aws:lambda:eu-central-1:196241772369:function:api_handler/invocations",
           "responses": {
@@ -297,8 +223,7 @@
               }
             }
           },
-          "passthroughBehavior": "when_no_match",
-          "type": "aws_proxy"
+          "passthroughBehavior": "when_no_match"
         }
       },
       "options": {
@@ -332,6 +257,7 @@
           }
         },
         "x-amazon-apigateway-integration": {
+          "type": "mock",
           "responses": {
             "default": {
               "statusCode": "200",
@@ -345,15 +271,12 @@
           "requestTemplates": {
             "application/json": "{\"statusCode\": 200}"
           },
-          "passthroughBehavior": "when_no_match",
-          "type": "mock"
+          "passthroughBehavior": "when_no_match"
         }
       }
     },
     "/signin": {
       "post": {
-        "summary": "sign-in",
-        "description": "login in system",
         "requestBody": {
           "required": true,
           "content": {
@@ -361,10 +284,13 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "email": { "type": "string", "format": "email" },
-                  "password": { "type": "string", "format": "password" }
-                },
-                "required": ["email", "password"]
+                  "email": {
+                    "type": "string"
+                  },
+                  "password": {
+                    "type": "string"
+                  }
+                }
               }
             }
           }
@@ -384,18 +310,17 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "accessToken": { "type": "string" }
+                    "accessToken": {
+                      "type": "string"
+                    }
                   }
                 }
               }
             }
-          },
-          "400": {
-            "description": "auth error"
-
           }
         },
         "x-amazon-apigateway-integration": {
+          "type": "aws_proxy",
           "httpMethod": "POST",
           "uri": "arn:aws:apigateway:eu-central-1:lambda:path/2015-03-31/functions/arn:aws:lambda:eu-central-1:196241772369:function:api_handler/invocations",
           "responses": {
@@ -406,11 +331,28 @@
               }
             }
           },
-          "passthroughBehavior": "when_no_match",
-          "type": "aws_proxy"
+          "passthroughBehavior": "when_no_match"
         }
       },
       "options": {
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string"
+                  },
+                  "password": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "200 response",
@@ -434,13 +376,19 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Empty"
+                  "type": "object",
+                  "properties": {
+                    "accessToken": {
+                      "type": "string"
+                    }
+                  }
                 }
               }
             }
           }
         },
         "x-amazon-apigateway-integration": {
+          "type": "mock",
           "responses": {
             "default": {
               "statusCode": "200",
@@ -454,15 +402,63 @@
           "requestTemplates": {
             "application/json": "{\"statusCode\": 200}"
           },
-          "passthroughBehavior": "when_no_match",
-          "type": "mock"
+          "passthroughBehavior": "when_no_match"
+        }
+      }
+    },
+    "/signup": {
+      "post": {
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "firstName": {
+                    "type": "string"
+                  },
+                  "lastName": {
+                    "type": "string"
+                  },
+                  "email": {
+                    "type": "string"
+                  },
+                  "password": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "200 response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Empty"
+                }
+              }
+            }
+          }
+        },
+        "x-amazon-apigateway-integration": {
+          "type": "mock",
+          "httpMethod": "POST",
+          "uri": "arn:aws:apigateway:eu-central-1:lambda:path/2015-03-31/functions/arn:aws:lambda:eu-central-1:196241772369:function:api_handler/invocations",
+          "responses": {
+            "default": {
+              "statusCode": "200"
+            }
+          },
+          "passthroughBehavior": "when_no_match"
         }
       }
     },
     "/tables/{tableId}": {
       "get": {
-        "summary": "get table by id",
-        "description": "getting information about specifyed table",
         "parameters": [
           {
             "name": "tableId",
@@ -498,6 +494,7 @@
           }
         ],
         "x-amazon-apigateway-integration": {
+          "type": "aws_proxy",
           "httpMethod": "POST",
           "uri": "arn:aws:apigateway:eu-central-1:lambda:path/2015-03-31/functions/arn:aws:lambda:eu-central-1:196241772369:function:api_handler/invocations",
           "responses": {
@@ -508,8 +505,7 @@
               }
             }
           },
-          "passthroughBehavior": "when_no_match",
-          "type": "aws_proxy"
+          "passthroughBehavior": "when_no_match"
         }
       },
       "options": {
@@ -553,6 +549,7 @@
           }
         },
         "x-amazon-apigateway-integration": {
+          "type": "mock",
           "responses": {
             "default": {
               "statusCode": "200",
@@ -566,115 +563,7 @@
           "requestTemplates": {
             "application/json": "{\"statusCode\": 200}"
           },
-          "passthroughBehavior": "when_no_match",
-          "type": "mock"
-        }
-      }
-    },
-    "/signup": {
-      "post": {
-        "summary": "registration",
-        "description": "registration new user",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "firstName": { "type": "string" },
-                  "lastName": { "type": "string" },
-                  "email": { "type": "string", "format": "email" },
-                  "password": { "type": "string", "format": "password" }
-                },
-                "required": ["email", "password", "firstName", "lastName"]
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "200 response",
-            "headers": {
-              "Access-Control-Allow-Origin": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            },
-            "content": {
-              "application/json": {
-                "schema": {
-                  "description": "OK"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "error"
-          }
-        },
-        "x-amazon-apigateway-integration": {
-          "httpMethod": "POST",
-          "uri": "arn:aws:apigateway:eu-central-1:lambda:path/2015-03-31/functions/arn:aws:lambda:eu-central-1:196241772369:function:api_handler/invocations",
-          "responses": {
-            "default": {
-              "statusCode": "200",
-              "responseParameters": {
-                "method.response.header.Access-Control-Allow-Origin": "'*'"
-              }
-            }
-          },
-          "passthroughBehavior": "when_no_match",
-          "type": "aws_proxy"
-        }
-      },
-      "options": {
-        "responses": {
-          "200": {
-            "description": "200 response",
-            "headers": {
-              "Access-Control-Allow-Origin": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "Access-Control-Allow-Methods": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "Access-Control-Allow-Headers": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            },
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Empty"
-                }
-              }
-            }
-          }
-        },
-        "x-amazon-apigateway-integration": {
-          "responses": {
-            "default": {
-              "statusCode": "200",
-              "responseParameters": {
-                "method.response.header.Access-Control-Allow-Methods": "'*'",
-                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'",
-                "method.response.header.Access-Control-Allow-Origin": "'*'"
-              }
-            }
-          },
-          "requestTemplates": {
-            "application/json": "{\"statusCode\": 200}"
-          },
-          "passthroughBehavior": "when_no_match",
-          "type": "mock"
+          "passthroughBehavior": "when_no_match"
         }
       }
     }
@@ -693,7 +582,9 @@
         "in": "header",
         "x-amazon-apigateway-authtype": "cognito_user_pools",
         "x-amazon-apigateway-authorizer": {
-          "x-syndicate-cognito-userpool-names": ["${booking_userpool}"],
+          "x-syndicate-cognito-userpool-names": [
+            "${booking_userpool}"
+          ],
           "type": "cognito_user_pools"
         }
       }
